Fix issue with video width on mobile

--- a/styles/view-mobile.scss
+++ b/styles/view-mobile.scss
@@ -1,6 +1,6 @@
 @import 'mobile.scss'
 
 .media video {
-    min-width: 96%;
+    width: 96%;
     margin-left: 2%;
 }
